--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafee AI Pro Studio</title>
+    <script>
+        // Browser Shim for process.env
+        window.process = window.process || { env: {} };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -40,7 +44,6 @@
             border: 1px solid rgba(255, 255, 255, 0.12);
         }
 
-        /* Improved Rainbow Ring */
         @keyframes rainbow-border {
             0% { border-color: #3b82f6 #6366f1 #8b5cf6 #d946ef; filter: drop-shadow(0 0 15px rgba(59, 130, 246, 0.4)); }
             33% { border-color: #d946ef #3b82f6 #6366f1 #8b5cf6; filter: drop-shadow(0 0 15px rgba(217, 70, 239, 0.4)); }
@@ -63,7 +66,6 @@
             50% { transform: scale(1.1); opacity: 1; filter: brightness(1.4); }
         }
 
-        /* Galaxy Transition Styles */
         .galaxy-container {
             position: fixed;
             inset: 0;
@@ -144,7 +146,6 @@
         @keyframes zoomIn { from { transform: scale(0.95); opacity: 0; } to { transform: scale(1); opacity: 1; } }
         @keyframes slideUp { from { transform: translateY(20px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
 
-        /* Custom Scrollbar */
         ::-webkit-scrollbar { width: 5px; }
         ::-webkit-scrollbar-track { background: #020202; }
         ::-webkit-scrollbar-thumb { background: #1e40af; border-radius: 10px; }
@@ -162,5 +163,6 @@
 </head>
 <body class="pro-bg-gradient">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
